<resources>
    <string name="app_name">水路通</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入用户名或手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="error_incorrect_password">账号或密码错误</string>
    <string name="homepage">首页</string>
    <string name="msg">消息</string>
    <string name="mine">我的</string>
</resources>
