<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.watertransport.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:id="@+id/fl_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rb_homepage"
                style="@style/MainBottomMenuStyle"
                android:drawableTop="@drawable/selector_btn_homepage"
                android:text="@string/homepage" />

            <TextView
                android:id="@+id/rb_msg"
                style="@style/MainBottomMenuStyle"
                android:drawableTop="@drawable/selector_btn_msg"
                android:text="@string/msg" />

            <TextView
                android:id="@+id/rb_mine"
                style="@style/MainBottomMenuStyle"
                android:drawableTop="@drawable/selector_btn_mine"
                android:text="@string/mine" />
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
